--- a/聊天室reco参数分析.ipynb
+++ b/聊天室reco参数分析.ipynb
@@ -447,6 +447,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74118"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#进入聊天室用户数\n",
+    "data.drop_duplicates('user_id')['user_id'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27004"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#新用户数\n",
+    "data.loc[data['is_new']==1,:].drop_duplicates('user_id')['user_id'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
